force-app/main/default/objects/Game__c/Game__c.object-meta.xml
<CustomObject>
    <label>Match</label>
    <nameField>
        <displayFormat>MATCH-{000000000}</displayFormat>
        <label>Match Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Matches</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>