force-app/main/default/objects/Game__c/fields/AwayTeam__c.field-meta.xml
<CustomField>
    <fullName>AwayTeam__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Away Team</label>
    <referenceTo>Team__c</referenceTo>
    <relationshipLabel>Matches (Away Team)</relationshipLabel>
    <relationshipName>AwayTeam</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>