force-app/main/default/objects/Game__c/fields/ChoseTo__c.field-meta.xml
<CustomField>
    <fullName>ChoseTo__c</fullName>
    <label>Chose To</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Bat</fullName>
            </value>
            <value>
                <fullName>Bowl</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>