force-app/main/default/objects/Game__c/fields/Loser__c.field-meta.xml
<CustomField>
    <fullName>Loser__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Loser</label>
    <referenceTo>Team__c</referenceTo>
    <relationshipLabel>Matches (Loser)</relationshipLabel>
    <relationshipName>Matches1</relationshipName>
    <type>Lookup</type>
</CustomField>