force-app/main/default/objects/Game__c/fields/MatchFinished__c.field-meta.xml
<CustomField>
    <fullName>MatchFinished__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Match Finished</label>
    <type>Checkbox</type>
</CustomField>