force-app/main/default/objects/Game__c/fields/MatchStarted__c.field-meta.xml
<CustomField>
    <fullName>MatchStarted__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Match Started</label>
    <type>Checkbox</type>
</CustomField>