force-app/main/default/objects/Game__c/fields/MatchStartTime__c.field-meta.xml
<CustomField>
    <fullName>MatchStartTime__c</fullName>
    <label>Match Start Time</label>
    <required>true</required>
    <type>DateTime</type>
</CustomField>