force-app/main/default/objects/Game__c/fields/MatchTitle__c.field-meta.xml
<CustomField>
    <fullName>MatchTitle__c</fullName>
    <formula>Tournament__r.Name &amp; &quot; - &quot; &amp; HomeTeam__r.DisplayName__c &amp; &quot; Vs &quot; &amp; AwayTeam__r.DisplayName__c &amp; &quot; (&quot; &amp; 
CASE (
    MONTH( DATEVALUE( MatchStartTime__c )),
    1, &quot;January&quot;,
    2, &quot;February&quot;,
    3, &quot;March&quot;, 
    4, &quot;April&quot;, 
    5, &quot;May&quot;, 
    6, &quot;June&quot;,
    7, &quot;July&quot;,
    8, &quot;August&quot;,
    9, &quot;September&quot;,
    10, &quot;October&quot;,
    11, &quot;November&quot;,
    12, &quot;December&quot;,
    &quot;None&quot;
) 
&amp; &quot; &quot; &amp; TEXT ( DAY ( DATEVALUE( MatchStartTime__c ))) &amp; &quot;, &quot; &amp; TEXT ( YEAR ( DATEVALUE( MatchStartTime__c ))) &amp; &quot;)&quot;</formula>
    <label>Match Title</label>
    <type>Text</type>
</CustomField>