force-app/main/default/objects/Game__c/fields/MatchType__c.field-meta.xml
<CustomField>
    <fullName>MatchType__c</fullName>
    <formula>TEXT( Tournament__r.Type__c )</formula>
    <label>Match Type</label>
    <type>Text</type>
</CustomField>