force-app/main/default/objects/Game__c/fields/Overs__c.field-meta.xml
<CustomField>
    <fullName>Overs__c</fullName>
    <formula>Tournament__r.Overs__c</formula>
    <label>Overs</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>