force-app/main/default/objects/Game__c/fields/TossDecision__c.field-meta.xml
<CustomField>
    <fullName>TossDecision__c</fullName>
    <formula>TossWonBy__r.DisplayName__c + &apos; Won The Toss &amp; Elected To &apos; + TEXT( ChoseTo__c ) + &apos; First&apos;</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Toss Decision</label>
    <type>Text</type>
</CustomField>