force-app/main/default/objects/Game__c/fields/TossDone__c.field-meta.xml
<CustomField>
    <fullName>TossDone__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Toss Done?</label>
    <type>Checkbox</type>
</CustomField>