force-app/main/default/objects/Game__c/fields/TossWonBy__c.field-meta.xml
<CustomField>
    <fullName>TossWonBy__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Toss Won By</label>
    <referenceTo>Team__c</referenceTo>
    <relationshipName>TossWonBy</relationshipName>
    <type>Lookup</type>
</CustomField>