force-app/main/default/objects/Game__c/fields/Winner__c.field-meta.xml
<CustomField>
    <fullName>Winner__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Winner</label>
    <referenceTo>Team__c</referenceTo>
    <relationshipLabel>Matches (Winner)</relationshipLabel>
    <relationshipName>MatchWinner</relationshipName>
    <type>Lookup</type>
</CustomField>