force-app/main/default/objects/Game__c/validationRules/Different_Teams_Should_Play_Match.validationRule-meta.xml
<ValidationRule>
    <fullName>Different_Teams_Should_Play_Match</fullName>
    <active>true</active>
    <description>A match can only be played between a home team and away team. Both the teams need to be different</description>
    <errorConditionFormula>AwayTeam__c = HomeTeam__c</errorConditionFormula>
    <errorMessage>Please choose different teams to create a match</errorMessage>
</ValidationRule>