force-app/main/default/objects/Game__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Tournament__c</columns>
    <columns>Stadium__c</columns>
    <columns>MatchType__c</columns>
    <columns>MatchStartTime__c</columns>
    <columns>HomeTeam__c</columns>
    <columns>AwayTeam__c</columns>
    <columns>TossWonBy__c</columns>
    <columns>ChoseTo__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>